...
    case scotland

    var id: String { rawValue }

    var label: String {
        switch self {
        case .englandWales: return "England & Wales"
        case .scotland: return "Scotland"
        }
    }
}

struct EPCDashboardResponse: Decodable, Equatable {
...
